--- a/templates/home.html
+++ b/templates/home.html
@@ -4,8 +4,8 @@
     </head>
     <body>
         <h1>Headlines</h1>
-        <b>title</b><br />
-        <i>published</i><br />
-        <p>summer</p>
+        <b>{title}</b><br />
+        <i>{published}</i><br />
+        <p>{summer}</p>
     </body>
 </html>
