--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,6 @@
         <h1>Headlines</h1>
         <b>{{title}}</b><br />
         <i>{{published}}</i><br />
-        <p>{{summer}}</p>
+        <p>{{summary}}</p>
     </body>
 </html>
