--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,8 @@
 <html>
+    <form>
+        <input type="text" name="publication" placeholder="Search" />
+        <input type="submit" value="Submit" />
+    </form>
     <head>
         <title>Headlines</title>
     </head>
