--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <html>
-    <form>
+    <form action="/" method="POST">
         <input type="text" name="publication" placeholder="Search" />
         <input type="submit" value="Submit" />
     </form>
