--- a/templates/home.html
+++ b/templates/home.html
@@ -3,11 +3,19 @@
         <input type="text" name="publication" placeholder="Search" />
         <input type="submit" value="Submit" />
     </form>
+    <form>
+        <input type="text" name="city" placeholder="Weather search" />
+        <input type="submit" value="Submit" />
+    </form>
     <head>
         <title>Headlines</title>
     </head>
     <body>
         <h1>Headlines</h1>
+        <h2>Current weather</h2>
+            <p>City: <b>{{weather.city}},{{weather.country}}</b></p>
+            <p>{{weather.description}} |{{weather.temperature}}&#8451;</p>
+        <h2>Headlines</h2>
         {% for article in articles %}
             <b> <a href="{{article.link}}">{{article.title}}</a></b><br />
             <i>{{article.published}}</i><br />
